--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
@@ -7,26 +8,71 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
-    <!-- App CSS -->
+    <!-- External Google Font CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
+
+    <!-- External Font Awesome Icons CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+
+    <!-- App Layout CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
-    <!-- External JS -->
+    <!-- App Nav CSS -->
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+
+    <!-- App New Tweets CSS -->
+    <link rel="stylesheet" href="/styles/new-tweets.css" type="text/css" />
+
+    <!-- App Posted Tweets CSS -->
+    <link rel="stylesheet" href="styles/posted-tweets.css" type="text/css" />
+
+    <!-- External jQuery JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+
+    <!-- App Composer Character Counter JS -->
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+    <!-- App Timestamp Calculator JS -->
+    <script type="text/javascript" src="/scripts/timestamp-calc.js"></script>
+
   </head>
 
   <body>
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
+      <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button id="compose-btn">
+        <i class="far fa-edit"></i>
+          <span>Compose</span>
+      </button>
+    </nav>
+
+    <!-- Error message area -->
+      <div id="error-message">
+        <span>No error yet</span>
+      </div>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+          <form id="composer-form" action="/tweets" method="POST">
+            <textarea class="composer-form-textarea" name="text" placeholder="What are you humming about?"></textarea>
+            <input class="submit-tweet" type="submit" value="Tweet">
+            <span class="counter">140</span>
+          </form>
+      </section>
+
+      <!-- Container for posted tweets -->
+      <section id="tweets-container">
+      <!-- Posted tweets to be appended here -->
+      </section>
     </main>
 
   </body>
